try fix NoClassDefFound ++